--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lib": "lib"
   },
   "dependencies": {
+    "aws-sdk": "^2.344.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.4",
